[authelia]new test

--- a/charts/authelia/templates/authelia/configmap.yaml
+++ b/charts/authelia/templates/authelia/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: config-authelia
+  name: {{ include "authelia.fullname" . }}
 data:
   configuration.yaml : |
     theme: light
