--- a/charts/authelia/templates/authelia/secret.yaml
+++ b/charts/authelia/templates/authelia/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: secrets-authelia
+  name: {{ include "authelia.fullname" . }}
 data:
   jwt-secret: {{ .Values.jwtSecret | b64enc | quote }}
   session-secret: {{ .Values.sessionSecret | b64enc | quote }}
