--- a/charts/authelia/templates/lldap/secret.yaml
+++ b/charts/authelia/templates/lldap/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: secrets-lldap
+  name: {{ include "authelia.fullname" . }}-lldap
 data:
   lldap-jwt-secret: {{ .Values.lldap.jwtSecret | b64enc | quote }}
   lldap-key-seed: {{ .Values.lldap.keySeed | b64enc | quote }}
