--- a/charts/authelia/templates/authelia/deployment.yaml
+++ b/charts/authelia/templates/authelia/deployment.yaml
@@ -27,6 +27,7 @@ spec:
       hostNetwork: false
       hostPID: false
       hostIPC: false
+      enableServiceLinks: false
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
