--- a/charts/home-assistant/templates/codeserver-ingress.yaml
+++ b/charts/home-assistant/templates/codeserver-ingress.yaml
@@ -2,23 +2,25 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
- name: {{ template "home-assistant.fullname" . }}-codeserver
- annotations:
-   cert-manager.io/cluster-issuer: "{{ .Values.addons.codeserver.ingress.tls }}"
+  name: {{ template "home-assistant.fullname" . }}-codeserver
+  {{- with .Values.addons.codeserver.ingress.annotations }}
+  annotations:
+    {{ toYaml . | nindent 4 }}
+  {{- end }}
 spec:
- tls:
-   - hosts:
-       - {{ .Values.addons.codeserver.ingress.host }}
-     secretName: tls-home-assistant-codeserver
- rules:
-   - host: {{ .Values.addons.codeserver.ingress.host }}
-     http:
-       paths:
-         - path: /
-           pathType: Prefix
-           backend:
-             service:
-               name: {{ template "home-assistant.fullname" . }}-codeserver
-               port:
-                 name: codeserver
+  tls:
+    - hosts:
+        - {{ .Values.addons.codeserver.ingress.host }}
+      secretName: tls-home-assistant-codeserver
+  rules:
+    - host: {{ .Values.addons.codeserver.ingress.host }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ template "home-assistant.fullname" . }}-codeserver
+                port:
+                  name: codeserver
 {{- end }}
