--- a/charts/nextcloud/templates/memories/memories-deployment.yaml
+++ b/charts/nextcloud/templates/memories/memories-deployment.yaml
@@ -54,6 +54,9 @@ spec:
         resources:
           limits:
             nvidia.com/gpu: {{ (int .Values.memories.gpu.nvidia) }}
+        securityContext:
+          runAsUser: 33
+          runAsGroup: 33
       volumes:
       - name: nextcloud-data
         {{- if .Values.nextcloud.persistence.data.enabled }}
