--- a/charts/nextcloud/templates/memories/memories-deployment.yaml
+++ b/charts/nextcloud/templates/memories/memories-deployment.yaml
@@ -60,15 +60,16 @@ spec:
       volumes:
       - name: nextcloud-data
         {{- if .Values.nextcloud.persistence.data.enabled }}
-        persistentVolumeClaim:
-          claimName: {{ if .Values.nextcloud.persistence.data.existingClaim }}{{ .Values.nextcloud.persistence.data.existingClaim }}{{- else }}nextcloud-data-pvc{{- end }}
+        hostPath:
+          path: {{ .Values.nextcloud.persistence.data.hostPath }}
+          type: Directory
         {{- else }}
         emptyDir: {}
         {{- end }}
       - name: nextcloud
         {{- if .Values.nextcloud.persistence.config.enabled }}
         persistentVolumeClaim:
-          claimName: {{ if .Values.nextcloud.persistence.config.existingClaim }}{{ .Values.nextcloud.persistence.config.existingClaim }}{{- else }}nextcloud-pvc{{- end }}
+          claimName: {{ if .Values.nextcloud.persistence.config.existingClaim }}{{ .Values.nextcloud.persistence.config.existingClaim }}{{- else }}nextcloud-config-pvc{{- end }}
         {{- else }}
         emptyDir: {}
         {{- end }}
