--- a/charts/authelia/templates/authelia/configmap.yaml
+++ b/charts/authelia/templates/authelia/configmap.yaml
@@ -4,52 +4,41 @@ metadata:
   name: {{ include "authelia.fullname" . }}
 data:
   configuration.yaml : |
-    theme: light
-    default_2fa_method: ""
-    server:
-      address: "tcp://:9091/"
-      asset_path: ""
-      headers:
-        csp_template: ""
-      buffers:
-        read: 4096
-        write: 4096
-      timeouts:
-        read: "6s"
-        write: "6s"
-        idle: "30s"
-      endpoints:
-        enable_pprof: false
-        enable_expvars: false
-    log:
-      level: "info"
-      format: "text"
-      file_path: ""
-      keep_stdout: true
-    identity_validation:
-      elevated_session:
-        code_lifespan: "5m"
-        elevation_lifespan: "10m"
-        characters: 8
-        require_second_factor: false
-        skip_second_factor: false
-      reset_password:
-        jwt_lifespan: "5m"
-        jwt_algorithm: "HS256"
-    webauthn:
-      disable: false
-      display_name: "Authelia"
-      attestation_conveyance_preference: "indirect"
-      user_verification: "preferred"
-      timeout: "1m"
+    theme: {{ .Values.config.theme }}
+    default_2fa_method: {{ .Values.config.default_2fa_method }}
+
+    {{- with .Values.config.server }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
+    {{- with .Values.config.log }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
+    {{- with .Values.config.identity_validation }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
+    {{- with .Values.config.webauthn }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
+    {{- with .Values.config.totp }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
     ntp:
       address: "udp://time.cloudflare.com:123"
       version: 3
       max_desync: "3s"
       disable_startup_check: false
       disable_failure: false
+    
     {{- if .Values.lldap.enabled }}
     authentication_backend:
+      {{- with .Values.config.password_reset }}
+      {{- toyml . | nindent 6 }}
+      {{- end }}
       ldap:
         implementation: "custom"
         address: ldap://{{ include "authelia.fullname" . }}-lldap:3890
@@ -66,15 +55,11 @@ data:
         base_dn: '{{ .Values.lldap.baseDn }}'
         user: 'uid=admin,ou=people,{{ .Values.lldap.baseDn }}'
     {{- end }}
-    password_policy:
-      standard:
-        enabled: true
-        min_length: 6
-        max_length: 50
-        require_uppercase: true
-        require_lowercase: true
-        require_number: true
-        require_special: false
+
+    {{- with .Values.config.password_policy }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
     session:
       name: "authelia_session"
       same_site: "lax"
@@ -94,10 +79,11 @@ data:
         port: 6379
         database_index: 0
         minimum_idle_connections: 0
-    regulation:
-      max_retries: 3
-      find_time: "2m"
-      ban_time: "2m"
+    
+    {{- with .Values.config.regulation }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
     {{- if .Values.postgresql.enabled }}
     storage:
       postgres:
@@ -107,27 +93,21 @@ data:
         schema: "public"
         username: {{ .Values.postgresql.authelia.user }}
     {{- end }}
-    access_control:
-      default_policy: "one_factor"
+
+    {{- with .Values.config.access_control }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
     notifier:
       smtp:
         address: "{{ .Values.smtp.address }}"
         username: "{{ .Values.smtp.username }}"
         sender: "{{ .Values.smtp.sender }}"
-    {{- if .Values.oidc.enabled }}
-    identity_providers:
-      oidc:
-        lifespans:
-          access_token: "1h"
-          authorize_code: "1m"
-          id_token: "1h"
-          refresh_token: "1h and 30m"
-        enforce_pkce: "public_clients_only"
-        enable_pkce_plain_challenge: false
-        enable_client_debug_messages: false
-        enable_jwt_access_token_stateless_introspection: false
-        minimum_parameter_entropy: 8
-        discovery_signed_response_alg: ""
-        discovery_signed_response_key_id: ""
-        require_pushed_authorization_requests: false
+
+    {{- with .Values.config.identity_providers }}
+    {{- toyml . | nindent 4 }}
+    {{- end }}
+
+    {{- with .Values.config.telemetry }}
+    {{- toyml . | nindent 4 }}
     {{- end }}
