--- a/charts/authelia/values.yaml
+++ b/charts/authelia/values.yaml
@@ -76,3 +76,112 @@ redis:
   master:
     persistence:
       storageClass: ""
+
+config:
+  ## theme ##
+  theme: "light"
+
+  default_2fa_method: ""
+
+  ## server ## https://www.authelia.com/configuration/miscellaneous/server/
+  server:
+    address: "tcp://:9091/"
+    asset_path: ""
+    headers:
+      csp_template: ""
+    buffers:
+      read: 4096
+      write: 4096
+    timeouts:
+      read: "6s"
+      write: "6s"
+      idle: "30s"
+    endpoints:
+      enable_pprof: false
+      enable_expvars: false
+    
+  ## log ## https://www.authelia.com/configuration/miscellaneous/logging/
+  log:
+    level: "info"
+    format: "text"
+    file_path: ""
+    keep_stdout: true
+  
+  ## password_reset ## https://www.authelia.com/configuration/first-factor/introduction/
+  password_reset:
+    disable: true
+    custom_url: ''
+    
+  ## identity_validation ## https://www.authelia.com/configuration/identity-validation/introduction/
+  identity_validation:
+    elevated_session:
+      code_lifespan: "5m"
+      elevation_lifespan: "10m"
+      characters: 8
+      require_second_factor: false
+      skip_second_factor: false
+    reset_password:
+      jwt_lifespan: "5m"
+      jwt_algorithm: "HS256"
+  
+  ## webauthn ## https://www.authelia.com/configuration/second-factor/webauthn/
+  webauthn:
+    disable: true
+    display_name: "Authelia"
+    attestation_conveyance_preference: "indirect"
+    user_verification: "preferred"
+    timeout: "1m"
+  
+  ## totp ## https://www.authelia.com/configuration/second-factor/time-based-one-time-password/
+  totp:
+    disable: true
+    issuer: 'authelia.com'
+    algorithm: 'sha1'
+    digits: 6
+    period: 30
+    skew: 1
+    secret_size: 32
+    allowed_algorithms:
+      - 'SHA1'
+    allowed_digits:
+      - 6
+    allowed_periods:
+      - 30
+    disable_reuse_security_policy: false
+
+  ## password_policy ## https://www.authelia.com/configuration/security/password-policy/
+  password_policy:
+    standard:
+      enabled: true
+      min_length: 6
+      max_length: 50
+      require_uppercase: true
+      require_lowercase: true
+      require_number: true
+      require_special: false
+  
+  ## access_control ## https://www.authelia.com/configuration/security/access-control/
+  access_control:
+    default_policy: "one_factor"
+  
+  ## identity_providers ## https://www.authelia.com/configuration/identity-providers/openid-connect/provider/
+  identity_providers: {}
+  
+  ## regulation ## https://www.authelia.com/configuration/security/regulation/
+  regulation:
+    max_retries: 3
+    find_time: "2m"
+    ban_time: "2m"
+  
+  ## telemetry ##
+  telemetry:
+    metrics:
+      enabled: false
+      address: 'tcp://:9959/metrics'
+      buffers:
+        read: 4096
+        write: 4096
+      timeouts:
+        read: '6s'
+        write: '6s'
+        idle: '30s'
