--- a/charts/nextcloud/templates/collabora/collabora-deployment.yaml
+++ b/charts/nextcloud/templates/collabora/collabora-deployment.yaml
@@ -50,4 +50,8 @@ spec:
                 - SYS_ADMIN
               drop:
                 - NET_RAW
+          {{- with .Values.collabora.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
 {{- end }}
