--- a/charts/nextcloud/templates/whiteboard/whiteboard-deployment.yaml
+++ b/charts/nextcloud/templates/whiteboard/whiteboard-deployment.yaml
@@ -62,4 +62,8 @@ spec:
             initialDelaySeconds: 15
             periodSeconds: 20
             failureThreshold: 5
+          {{- with .Values.whiteboard.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
 {{- end }}
