--- a/charts/jellyfin/values.yaml
+++ b/charts/jellyfin/values.yaml
@@ -56,3 +56,13 @@ readinessProbe:
     port: 8096
   initialDelaySeconds: 30
   periodSeconds: 15
+
+resources: {}
+  # limits:
+  #   cpu: 500m
+  #   memory: 1Gi
+  #   nvidia.com/gpu: 1
+  # requests:
+  #   cpu: 500m
+  #   memory: 500Mi
+  #   nvidia.com/gpu: 1
