--- a/charts/jellyfin/templates/deployment.yaml
+++ b/charts/jellyfin/templates/deployment.yaml
@@ -22,9 +22,6 @@ spec:
       {{- if gt (int .Values.gpu.nvidia) 0 }}
       runtimeClassName: nvidia
       {{- end }}
-      {{- if .Values.enableDLNA }}
-      hostNetwork: true
-      {{- end }}
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
@@ -81,9 +78,10 @@ spec:
             - name: {{ .name }}
               mountPath: {{ .dir }}
             {{- end }}
+          {{- with .Values.resources }}
           resources:
-              limits:
-                nvidia.com/gpu: {{ .Values.gpu.nvidia }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
       volumes:
         - name: media
           {{- if .Values.persistence.media.enabled }}
