--- a/charts/mqtt/templates/mqtt-script-init.yaml
+++ b/charts/mqtt/templates/mqtt-script-init.yaml
@@ -15,7 +15,10 @@ data:
     echo "mkdir /mosquitto/configinc"
     if [ ! -f "/mosquitto/configinc" ]; then
       mkdir /mosquitto/configinc
+      echo "password_file /mosquitto/configinc/passwordfile" > /mosquitto/configinc/passwordconfig.conf
     fi
+    
+    echo "" > /mosquitto/configinc/passwordfile
 
     chown -R 1883:1883 /mosquitto
 
