--- a/charts/mqtt/templates/mqtt-deployment.yaml
+++ b/charts/mqtt/templates/mqtt-deployment.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       serviceAccountName: {{ include "mosquitto.serviceAccountName" . }}
       securityContext:
-        runAsUser: 1883
-        runAsGroup: 1883
+        # runAsUser: 1883
+        # runAsGroup: 1883
         fsGroup: 1883
       initContainers:
       - name: "init-volumes"
