[mqtt] new test

--- a/charts/mqtt/templates/mqtt-deployment.yaml
+++ b/charts/mqtt/templates/mqtt-deployment.yaml
@@ -58,7 +58,7 @@ spec:
         volumeMounts:
         - mountPath: /mosquitto
           name: mosquitto
-        - mountPath: /mosquitto/config/mosquitto.conf
+        - mountPath: /tmp/mosquitto.conf
           subPath: mosquitto.conf
           name: configmap
         {{- with .Values.authentication }}
