--- a/charts/esphome/values.yaml
+++ b/charts/esphome/values.yaml
@@ -1,9 +1,9 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/esphome/esphome
+  repository: esphome/esphome
   pullPolicy: IfNotPresent
-  tag: "2024.12.4"
+  tag: "2025.2.1"
 
 username: admin
 password: changeme
