--- a/charts/mqtt/templates/mqtt-script-init.yaml
+++ b/charts/mqtt/templates/mqtt-script-init.yaml
@@ -15,6 +15,9 @@ data:
     echo "mkdir /mosquitto/configinc"
     if [ ! -f "/mosquitto/configinc" ]; then
       mkdir /mosquitto/configinc
+      echo "password_file /mosquitto/configinc/passwordfile" > /mosquitto/configinc/passwordconfig.conf
+    else
+      rm -f /mosquitto/configinc/passwordfile
     fi
 
     chown -R 1883:1883 /mosquitto
