--- a/charts/mqtt/templates/mqtt-script-init.yaml
+++ b/charts/mqtt/templates/mqtt-script-init.yaml
@@ -16,6 +16,7 @@ data:
     if [ ! -f "/mosquitto/configinc" ]; then
       mkdir /mosquitto/configinc
       echo "password_file /mosquitto/configinc/passwordfile" > /mosquitto/configinc/passwordconfig.conf
+      echo "" > /mosquitto/configinc/passwordfile
     fi
     
     chown -R 1883:1883 /mosquitto
