--- a/charts/nextcloud/values.yaml
+++ b/charts/nextcloud/values.yaml
@@ -68,6 +68,15 @@ nextcloud:
       #!/bin/sh
       echo "$(date) : Begining of cron..."
       echo "$(date) : End of cron."
+    resources:
+      limits:
+        nvidia.com/gpu: 0
+      #   cpu: 500m
+      #   memory: 1Gi
+      requests:
+        nvidia.com/gpu: 0
+      #   cpu: 500m
+      #   memory: 500Mi
   resources:
     limits:
       nvidia.com/gpu: 0
