--- a/charts/esphome/templates/deployment.yaml
+++ b/charts/esphome/templates/deployment.yaml
@@ -23,9 +23,17 @@ spec:
       labels:
         {{- include "esphome.labels" . | nindent 8 }}
     spec:
+      {{- with .Values.dnsPolicy }}
+      dnsPolicy: {{ . }}
+      {{- end }}
+      {{- with .Values.nameservers }}
+      dnsConfig:
+        nameservers:
+          - {{ . }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag  }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
@@ -34,6 +42,9 @@ spec:
           env:
             - name: TZ
               value: {{ .Values.timezone | quote }}
+            - name: ESPHOME_DASHBOARD_USE_PING
+              value: "true"
+            {{- if .Values.authentification.enabled }}
             - name: USERNAME
               valueFrom:
                 secretKeyRef:
@@ -44,6 +55,7 @@ spec:
                 secretKeyRef:
                   name: {{ template "esphome.fullname" . }}-esphome
                   key: esphome-password
+            {{- end }}
           volumeMounts:
             - mountPath: /config
               name: config
