--- a/charts/esphome/values.yaml
+++ b/charts/esphome/values.yaml
@@ -3,10 +3,15 @@ replicaCount: 1
 image:
   repository: esphome/esphome
   pullPolicy: IfNotPresent
-  tag: "2025.2.2"
+  tag: "2025.3.3"
 
-username: admin
-password: changeme
+authentification:
+  enabled: false
+  username: admin
+  password: changeme
+
+# dnsPolicy: None
+# nameservers: 192.168.1.1
 
 serviceAccount:
   create: false
