--- a/charts/esphome/templates/secret.yaml
+++ b/charts/esphome/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.authentification.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,3 +9,4 @@ type: Opaque
 data:
   esphome-username: {{ .Values.username | b64enc | quote }}
   esphome-password: {{ .Values.password | b64enc | quote }}
+{{- end }}
